--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.bw.movie">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- if you want to load images from a file OR from the internet -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- if you want to load images from a file OR from the internet -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <dist:module dist:instant="true" />
 
     <application
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.RegisterActivity"></activity>
+        <activity android:name=".view.SoActivity"></activity>
+        <activity android:name=".view.RegisterActivity" />
         <activity android:name=".view.HomeActivity" />
         <activity android:name=".view.MyActivity" />
         <activity android:name=".view.LoginActivity" />
